Fixing horizontal scroll

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     max-width: 100%;
     display: grid;
     gap: 1rem;
-    margin: 10px;
+    margin: 10px 0px 10px 0px;
     grid-template-columns: repeat(auto-fill, minmax(512px, 1fr));
     width: 100vw;
     height: 100vh;
